[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Letters/I-pixel-u.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Characters/Pirate/Dead Ground 03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/click.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/BackgroundMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Sounds/gameover.mp3" type="AudioStream" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.733333 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.996094, 0.216908, 0.216908, 1 )

[sub_resource type="Theme" id=15]
/styles/colorButton = SubResource( 21 )

[sub_resource type="DynamicFont" id=16]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.823529, 0.458824, 0.235294, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.854902, 0.427451, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.917647, 0.533333, 0.298039, 1 )
corner_detail = 1

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Dead",
"speed": 8.0
} ]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 80
alignment = 1

[node name="title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 944.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 944.0
margin_bottom = 433.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 289.0
margin_right = 654.0
margin_bottom = 116.0
custom_constants/separation = 40

[node name="VolverJugar" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 365.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( -755, 44 )
theme = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "  JUGAR DE NUEVO  "

[node name="Salir" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 365.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -755, 44 )
theme = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "    SALIR    "

[node name="animacionDead" type="AnimatedSprite" parent="."]
position = Vector2( 821, 102 )
scale = Vector2( 6, 6 )
frames = SubResource( 20 )
animation = "Dead"
playing = true

[node name="BackgroundMenu" parent="." instance=ExtResource( 13 )]

[node name="Sound" type="Node" parent="."]

[node name="Gameover" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 14 )
volume_db = -30.0

[node name="Hover" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 4 )
volume_db = -20.0

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/VolverJugar" to="." method="_on_VolverJugar_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/VolverJugar" to="." method="_on_VolverJugar_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Salir" to="." method="_on_Salir_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
